syntax = "proto3";

package flchain.committee;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "flchain/committee/params.proto";

option go_package = "flchain/x/committee/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams (MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc SubmitWeight (MsgSubmitWeight) returns (MsgSubmitWeightResponse);
  rpc SubmitScore  (MsgSubmitScore ) returns (MsgSubmitScoreResponse );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                           "authority";
  option           (amino.name) = "flchain/x/committee/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgSubmitWeight {
  option (cosmos.msg.v1.signer) = "creator";
  string creator         = 1;   // 제출자 주소 (msg.sender)
  string lnodeId         = 2;   // L-node ID
  string encryptedWeight = 3;   // 암호화된 학습 결과
  uint64 round           = 4;   // 제출 라운드
}

message MsgSubmitWeightResponse {}

message MsgSubmitScore {
  option (cosmos.msg.v1.signer) = "creator";
  string creator    = 1;    // 제출자 주소 (msg.sender)
  string cnodeId    = 2;    // C-node ID
  uint64 round      = 3;    // 제출 라운드
  string scoresJson = 4;    // L-node 목록(JSON) '[{"lnodeId":"node1","score":"0.88"},{"lnodeId":"node2","score":"0.67"}]'
}

message MsgSubmitScoreResponse {}

